# test_gen

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: cd.yml  ci.yml  label.yml  src_ci.yml
src/: lib.rs
tests/: doctest_example_assert_result_blocked.rs  doctest_example_assert_result_static.rs  doctest_example_attributes.rs  doctest_example_fruits.rs  doctest_example_square.rs  doctest_example_termination.rs  doctest_example_termination_basic.rs  doctest_example_termination_override.rs  tests.rs
