[package]
name = "test_gen"
version = "0.1.0"
edition = "2021"
description = "A comprehensive declarative macro, for concisely defining parameterised tests."
authors = ["Andy <andrew.dunn@ajja.org.uk>"]
license = "BSD-3-Clause"
documentation = "https://docs.rs/crate/test_gen"
repository = "https://github.com/DunnAnDusted/test_gen"
readme = "README.md"
keywords = ["test", "parameterized", "parametrized", "code-gen", "macro"]
categories = ["development-tools", "development-tools::testing", "no-std"]

[package.metadata]
msrv = "1.6.3"

[dependencies]
