[package]
name = "test_gen"
version = "0.2.0"
edition = "2021"
description = "A comprehensive function-like macro, for concisely defining parameterized tests."
authors = ["Andy <andrew.dunn@ajja.org.uk>"]
license = "BSD-3-Clause"
documentation = "https://docs.rs/test_gen/latest/test_gen"
repository = "https://github.com/DunnAnDusted/test_gen"
readme = "README.md"
keywords = ["test", "parameterized", "parametrized", "code-gen", "macro"]
categories = ["development-tools", "development-tools::testing"]

[package.metadata]
msrv = "1.63.0"

[dependencies]
proc-macro2 = "1.0.*"
quote = "1.0.*"
syn = {version = "1.0.*", features = ["full"]}

[lib]
proc-macro = true
